--- a/index.html
+++ b/index.html
@@ -55,10 +55,6 @@
           <a class="nav-link" href="#blogs">Blog</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
@@ -77,7 +73,12 @@
         <p>Welcome to Truly Teas, Your destination for exceptional teas that turn every sip into a soothing experience.
           <br>From rich, bold black teas to delicate green teas and aromatic herbal blends.
         </p>
-        <button id="btn">Shope Now</button>
+        <a class="video-link" target="_blank" href="https://youtu.be/EsOLVkFKbuM?si=Vl3990Rf3UXxE1ba">
+          <video class="styled-video" width="500px" controls autoplay muted loop>
+            <source src="images/adds.mp4" type="video/mp4">
+            <source src="" type="">
+          </video>
+      </a>
       </div>
      </section>
 
@@ -97,14 +98,26 @@
             </div>
             <div class="col-md-6">
               <h3>What Makes Our tea Special?</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga commodi corporis doloribus nihil perferendis suscipit quidem quos in, blanditiis fugiat!
-                <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut amet est voluptate nesciunt ducimus ad quis? Ut deserunt sequi ex!
-                <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nulla culpa quibusdam nostrum odit veritatis earum nihil sequi, ab numquam.
+              <p>Our tea stands out for its carefully selected, sustainably sourced ingredients, brewed with a commitment to quality and wellness.
+                <br><br>Each blend captures unique, rich flavors that not only delight the senses but also provide natural health benefits.
+                <br><br>With a commitment to sustainability, every cup represents our passion for quality and our dedication to offering a mindful.
               </p>
               <button id="about-btn">Learn More</button>
             </div>
+            <div class="col-md-6">
+              <div class="mission">
+                <h3>Our Mission</h3>
+                <p>So our MISSION is To make sure service is all equal and provide a better sell, quality amd performance for costumer's want also the taste of a tea in a good Herbalife.</p>
+              </div> 
+          </div>
+          <div class="col-md-6">
+            <div class="vision">
+              <h3>Our Vision</h3>
+              <p>The last our VISION is aiming goods or to give our clients the greatest possible tea experience. Truly Teas aims to carry on the tradition of offering wholesome drink options and integrating the consumption of fine teas into everyday life. One cup at a time or everyday, we hope to transform people's perceptions and ideas about tea.</p>
+            </div>
           </div>
         </div>
+
       </section>
 
 
@@ -441,6 +454,7 @@
               </div>
             </div>
           </div>
+          
 
 
 
@@ -451,10 +465,11 @@
 
                 <div class="col-md-7">
                   <div class="heading6">Contact <span>Us</span></div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, recusandae?
-                    <br>Lorem ipsum dolor sit amet consectetur.
+                  <p>Whether you have questions about our products, need assistance, or just want to connect.
+                    <br>We’re here to listen and provide support.
+                    
                   </p>
-                  <input type="text" class="form-control" placeholder="Nome" aria-label="deafult input example">
+                  <input type="text" class="form-control" placeholder="Name" aria-label="deafult input example">
                   <br>
                   <input type="email" class="form-control" placeholder="Email" aria-label="deafult input example">
                   <br>
@@ -464,11 +479,7 @@
                 </div>
 
                 <div class="col-md-5" id="col">
-                  <h1>Info</h1>
-                  <p><i class="fa-regular fa-envelope"></i>joezzelle@gmail.com</p>
-                  <p><i class="fa-solid fa-phone"></i>0945768492</p>
-                  <p><i class="fa-solid fa-building-columns"></i>Joezzelle Ramirez</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, veniam!</p>
+                  <img src="images/poster2.jpg" alt="">
                 </div>
 
               </div>
@@ -490,7 +501,7 @@
                         <h3> A Love Letter to Tea.</h3>
                         <h5>Truly Teas / Feburary 7 2022</h5>
                         <p>Ah, tea. The warm, comforting beverage that has been enjoyed for centuries across the globe. 
-                          <br>It's more than just a drink; it's a ritual, a moment of peace, a source of warmth and flavor..</p>
+                          <br>It's more than just a drink; it's a ritual, a moment of peace, a source of warmth and flavor.</p>
                         <div class="button-container">
                           <button id="blog-btn">Read More</button>
                         </div>
@@ -534,10 +545,6 @@
 
           <!-- footer start -->
            <footer id="footer">
-            <div class="social-links text-center">
-              <i class="fa-brands fa-facebook-f"></i>
-              <i class="fa-brands fa-instagram"></i>
-            </div>
             <div class="copyright text-center">
               &copy; Copyrigth <strong> <span>Truly Teas</span></strong>.All Rigths reserved
             </div>
