--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
         <p>Welcome to Truly Teas, Your destination for exceptional teas that turn every sip into a soothing experience.
           <br>From rich, bold black teas to delicate green teas and aromatic herbal blends.
         </p>
+        <a class="video-link" target="_blank" href="https://youtu.be/EsOLVkFKbuM?si=Vl3990Rf3UXxE1ba">
+          <video class="styled-video" width="500px" controls autoplay muted loop>
+            <source src="images/adds.mp4" type="video/mp4">
+            <source src="" type="">
+          </video>
+      </a>
       </div>
      </section>
 
